fixed issue caused by adding links to nav, made grid rows larger to accomodate overflow

--- a/style.css
+++ b/style.css
@@ -69,6 +69,16 @@ a:visited {
   text-decoration: none;
 }
 
+li > a {
+  color: #2a2a2a;
+  text-decoration: underline;
+}
+
+li > a:visited {
+  color: navy;
+  text-decoration: underline;
+}
+
 footer {
   background-color: rgb(243, 243, 243);
   grid-area: footer;
@@ -89,6 +99,7 @@ button {
   border-radius: 20px;
   padding: 12.5px 20px;
   font-size: 2.5vmin;
+  cursor: pointer;
 }
 
 ul {
@@ -102,7 +113,7 @@ ul {
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 12.5vh 70vh 12.5vh 70vh 50vh 50vh 50vh;
+  grid-template-rows: 12.5vh 70vh 12.5vh 70vh 55vh 55vh 60vh;
   overflow: auto;
   grid-template-areas: 
   "nav nav nav nav nav nav"
@@ -237,7 +248,7 @@ ul {
 @media (max-width: 375px) {
   .grid-container {
     grid-template-columns: 1fr;
-    grid-template-rows: 12.5vh 75vh 12.5vh 60vh 60vh 60vh 40vh 40vh 40vh 40vh 60vh;
+    grid-template-rows: 12.5vh 110vh 12.5vh 60vh 60vh 60vh 40vh 40vh 40vh 40vh 60vh;
     grid-template-areas: 
     "nav"
     "section-1"
@@ -254,7 +265,7 @@ ul {
   nav {
     padding: 0 0;
   }
-  nav > h3 {
+  nav > a {
     display: none;
   }
   #hamburger-menu {
